--- a/styles/style.css
+++ b/styles/style.css
@@ -2,15 +2,19 @@
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
 *{
-    margin: 0, auto;
+    margin: 0;
     font-family: 'Poppins', sans-serif;
 }
 /* header styles here */
 header{
-    margin: 80px 120px;
+    margin: 30px 120px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.header-title{
+    font-size: 2.8rem;
+    font-weight: 700;
 }
 /* nav styles start here */
 nav ul{
@@ -18,16 +22,136 @@ nav ul{
 }
 nav ul li {
     list-style: none;
+    
 }
 nav ul a{
     text-decoration: none;
     margin-left: 30px;
+    color: black;
+    font-size: 1.2rem;
 }
 /* nav styles end here */
+/* main sections start here */
+main{
+    margin: 0 120px;
+}
 /* header banner section styles here */
 .header-banner{
-    margin: 0 120px;
+    display: flex;
+    align-items: center;
+    gap: 100px;
+}
+.header-banner-title{
+    font-size: 2.2rem;
+}
+.header-banner-description{
+    font-size: 1.2rem;
+    font-weight: 500;
+
+}
+.btn-primary{
+    background-color: rgb(251, 17, 95);
+    padding: 5px 20px;
+    border-radius: 25px;
+    border: none;
+    color: white;
+    font-size: 1.2rem;
+}
+.header-banner-img{
+    background-image: url(../images/Circle\ design.svg);
+    background-repeat: no-repeat;
+
+}
+.header-banner-img img{
+    width: 350px;
+    height: 350px;
+    margin: 90px 40px;
+}
+/* company logos section styles here */
+.company-logos{
+    margin-left: 80px;
+    margin: 50px 0;
+}
+.company-logos img{
+    width: 5rem;
+    margin-left: 50px;
+    justify-content: center;
+    align-items: center;
+}
+/* company logos styles ended here */
+
+
+/* popular collection styles here */
+.collection-title{
+    text-align: center;
+    font-size: 2rem;
+    color:#3A3A3A;
+}
+.collection-cards{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+}
+.collection-card{
+    padding: 20px;
+    width: 300px;
+    height: 450px;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+.pupular-btn{
+    text-align: right;
+    color: rgba(224, 44, 109, 0.87);
+}
+/* featured products styles here */
+.featured-products{
+    margin: 50px 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 50px;
+}
+.btn-gear{
+    background: #E02C6D;
+    border: none;
+    color: #ffffff;
+    padding: 10px;
+    border-radius: 5px;
+}
+/* footer styles */
+.footer{
+    background: #0A0826;
+    color: #ffffff;
+    text-align: center;
+    padding: 80px 0;
+    line-height: 20px;
+}
+
+/* Responsive style rules */
+/* Mobile responsive style rules here */
+@media screen and (max-width:576px) {
+    header{
+        flex-direction: column;
+        margin: 10px;
+    }
+    .header-banner{
+        flex-direction: column-reverse;
+        margin: 30px;
+    }
+    nav ul a{
+        margin-left: 10px;
+    }
+    .header-banner-img img{
+        width: 60%;
+        height: 60%;
+        /* background-image: none; */
+        align-items: center;
+    }
+    .collection-cards{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .featured-products{
+        flex-direction: column;
+    }
 }
